Ejemplo de una rama

--- a/HTML_JCI/Pagina_principal.html
+++ b/HTML_JCI/Pagina_principal.html
@@ -181,7 +181,7 @@
             <div class="Cuerpo"> 
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Cupiditate illum corrupti repellat quasi quam, ex similique modi nihil accusamus quibusdam? 
-                    Autem velit obcaecati debitis. Eum beatae excepturi omnis atque rem.</p>
+                    Autem velit obcaecati debitis. Eum beatae excepturi omnis atque rem laskjdnflkjasndflkjasdfn.</p>
         </div>
 
         <!--Hay mas pasos pero estos se van agrgando a medida que se van necesitandi-->
