--- a/HTML_JCI/Pagina_principal.html
+++ b/HTML_JCI/Pagina_principal.html
@@ -33,9 +33,12 @@
         </header>
 
         <div class="Cuerpo">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Neque placeat voluptate dolores cumque sed possimus eveniet consequatur assumenda fugit, 
-                esse veritatis iusto! Perspiciatis voluptate, dolorum ad eveniet aliquid corporis nihil.</p>
+            <p>Willkommen! Der Bau eines PCs ist unter Technikfreunden ein heiß diskutiertes Thema, 
+                das sich inzwischen großer Beliebtheit erfreut. Auf dieser Seite stellen wir Ihnen die Aspekte vor, 
+                die Sie beim Bau eines PCs berücksichtigen müssen, damit Sie endlich die endgültige Entscheidung treffen können, 
+                ob es sich lohnt, einen PC zu bauen, oder ob es für Sie besser ist, einfach einen vorgefertigten Computer oder Laptop 
+                zu kaufen. Als nächstes präsentieren wir Ihnen ein Inhaltsverzeichnis, damit Sie sich mit allen Themen, die auf dieser 
+                Seite analysiert werden sollen, bekannt machen können.</p>
         </div>
         <!--Falta una imagen al lado derecho del texto-->
     </article>
@@ -62,19 +65,35 @@
 
     <article>
 
-        <h2>Lhont es sich enen Pc zu bauen</h2>
+        <h2>Lohnt es sich eine PC zu bauen?</h2>
             <div class="Cuerpo">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Cupiditate illum corrupti repellat quasi quam, ex similique modi nihil accusamus quibusdam? 
-                    Autem velit obcaecati debitis. Eum beatae excepturi omnis atque rem.</p>
+                <p>Das ist die häufigste Frage bei der Recherche, und das zu Recht, denn der Bau eines PCs ist ein Kompromiss, 
+                    und wenn man ihn selbst bauen will, anstatt ihn bauen zu lassen, ist man bereit nicht nur Geld, 
+                    sondern auch Zeit und Geduld zu opfern. Es gibt noch andere wichtige Aspekte, die man beim Bau eines PCs 
+                    berücksichtigen muss, nämlich Zweck und Mobilität. Im Folgenden werden wir diese verschiedenen Aspekte im Detail 
+                    untersuchen, und wie jeder dieser Aspekte für eine gute endgültige Entscheidung wichtig ist.</p>
             </div>
             <!--Falta una foto al lado derecho del texto-->
 
         <h3>Kosten</h3>
             <div class="Cuerpo">
-                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Necessitatibus eveniet explicabo dolorum, voluptatum nesciunt et delectus nisi fugit aspernatur, 
-                    porro velit! Eaque eligendi voluptate voluptatem architecto similique, quasi atque enim!</p>
+                <p>Im Allgemeinen ist der Preis der komplizierteste Teil der Einrichtung eines PCs. 
+                    In vielen Fällen wollen die Leute einen PC bauen, wie die, die die Streamer oder professionelle 
+                    Videospieler haben, mit diesen bunten LED-Leuchten und einem Traum-Setup. Dies würde leider eine enorme 
+                    Investition Ihrerseits bedeuten. Wenn Sie Ihren PC bauen wollen, müssen Sie als erstes die Kosten und den
+                    Zweck berücksichtigen, da diese Hand in Hand gehen. Je nachdem, was Sie mit Ihrem Computer machen wollen, 
+                    wird der Preis, den er Sie kosten wird, und dieser ist immer von Person zu Person unterschiedlich, da jede 
+                    Person normalerweise ein "Budget" hat, das sie bereit ist auszugeben.</p>
+                <p>Deshalb haben wir beschlossen, die PC-Typen in drei Kategorien zu unterteilen: 
+                    Hochwertig, gut und durchschnittlich. Im Folgenden zeigen wir Ihnen eine Tabelle mit den verschiedenen 
+                    Komponenten, aus denen ein funktionsfähiger PC besteht, jeweils mit dem Durchschnittspreis in jeder der
+                    PC-Kategorien. Aus den Daten in dieser Tabelle wird für jede der drei PC-Kategorien ein Durchschnittspreis 
+                    ermittelt, der es Ihnen ermöglicht, den Einzelpreis der Teile und den Endpreis des Computers 
+                    besser zu visualisieren.</p>
+                <p>Die Daten (Preise) jedes einzelnen der in dieser Tabelle aufgeführten Stücke wurden von Amazon extrahiert,
+                    wo die Qualifikation der Stücke und der Preis für diese berücksichtigt wurde, um sie entsprechend zu 
+                    kategorisieren, wobei jedes Stück seinen Referenzlink hat.</p>
+
                     <!--Falta una tabla de piezas y precios en la parte de abajo del texto-->
             </div>
 
@@ -82,31 +101,35 @@
                                             El titulo va debajo de la imagen y no del texto-->
                 <h4>High End PC ≈$XY</h4>
                     <div class="Cuerpo">
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                            Alias sint voluptatibus eos inventore qui eius vitae adipisci veritatis, quod,
-                            similique magni laudantium aliquam quos, ad error necessitatibus animi cum. Fuga!</p>
+                        <p>Ein PC, der für hohe Leistung vorgesehen ist. Im Allgemeinen wird er gebaut, wenn ein starker Computer 
+                            benötigt wird, der alles kann, und normalerweise nur von Leuten gebaut, die bereit sind, viel in ihre 
+                            Computereinrichtung zu investieren, oder von Leuten, die ihn für ihre Arbeit benötigen (Designer, Pro-Gamer,
+                            Streamer usw.).</p>
                     </div>
 
                 <h4>Good PC ≈$XY</h4>
                     <div class="Cuerpo">
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                            Alias sint voluptatibus eos inventore qui eius vitae adipisci veritatis, quod,
-                            similique magni laudantium aliquam quos, ad error necessitatibus animi cum. Fuga!</p>
+                        <p>Ein insgesamt guter PC ist ein Computer, der das, was der Benutzer wünscht, reibungslos und ohne
+                            Komplikationen erledigen kann, vom Gaming bis zum Design. Es ist die Art von Computer, die die meisten 
+                            Verbraucher besitzen, weil er ihren Erwartungen entspricht und noch immer in ihrem Budget liegt, wenn nicht
+                            sogar ein bisschen zu viel.</p>
                     </div>
 
                 <h4>Average PC ≈$XY</h4>
                     <div class="Cuerpo">
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                            Alias sint voluptatibus eos inventore qui eius vitae adipisci veritatis, quod,
-                            similique magni laudantium aliquam quos, ad error necessitatibus animi cum. Fuga!</p>
+                        <p>Ein Durchschnittlicher PC gibt Ihnen das, was Sie von einem Computer erwarten, wenn nichts anderes. 
+                            Es reicht aus, um Ihre täglichen Aufgaben problemlos zu erledigen, und es liegt fast immer in Ihrem
+                            Budgetbereich. Dieser Computer muss noch nicht einmal gebaut werden, da er in den meisten Geschäften 
+                            vorgefertigt zu finden ist. Er ist in der Regel im Besitz von Leuten, die kein besonderes Interesse an dem
+                            haben, was in ihrem Computer steckt, sie wollen nur, dass er funktioniert.</p>
                     </div>
             </div>
 
         <h3>Zweck</h3>
             <div class="Cuerpo">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Veritatis quibusdam ex optio harum sapiente minus enim illum sed quia mollitia! 
-                    Numquam necessitatibus quasi quibusdam possimus iusto ut explicabo minima eius!</p>
+                <p>Wie bereits erwähnt, gehen Zweck und Preis Hand in Hand. Je nachdem, was Sie mit Ihrem PC machen wollen, 
+                    kostet er Sie unterschiedlich viel. Nun werden wir die verschiedenen Zwecke zeigen, für die eine Person einen 
+                    PC gerne bauen würde.</p>
             </div>
 
             <div class="CategoriasPC"> <!--Estas tres van debajo de Zweck, enlistadas de forma horizontal, siendo el titulo encima de todo, 
@@ -135,9 +158,12 @@
         
         <h3>Zeit un Geduld</h3><!--En esta parte el texto va en la parte izquierda y la imagen en la parte derecha-->
             <div class="Cuerpo">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Veritatis quibusdam ex optio harum sapiente minus enim illum sed quia mollitia! 
-                    Numquam necessitatibus quasi quibusdam possimus iusto ut explicabo minima eius!</p>
+                <p>Ein Aspekt, der meistens ignoriert wird, ist die Zeit, die man für den Bau eines PCs benötigt, und die Geduld,
+                    die man haben muss. Um einen PC zu bauen, müssen Sie zunächst alle gewünschten Komponenten finden, was nicht immer 
+                    einfach ist, und dann noch auf ihre Ankunft warten. Wenn alle Teile eingetroffen sind, müssen Sie wissen, was jeder
+                    einzelne tut, um den Computer richtig zu bauen, und das kann Zeit und Geduld erfordern. Etwas, das viele Leute 
+                    nicht opfern wollen, der Hauptgrund, warum sich Leute ihre Computer mit Experten bauen lassen. 
+                    Eine gute Entscheidung in jedem Fall, sei Geduld nicht ihr Ding.</p>
             </div>
 
         <h3>Mobilitaet</h3><!--En esta parte el texto va en la parte derecha y la imagen en la parte izuierda-->
@@ -157,9 +183,16 @@
                                                                 El titulo va directamente encima dle texto con un pequeño espacio pero no por encima del espacio 
                                                                 que ocupa el mosaico de las 4 imagenes.-->
             <div class="Cuerpo"> 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Cupiditate illum corrupti repellat quasi quam, ex similique modi nihil accusamus quibusdam? 
-                    Autem velit obcaecati debitis. Eum beatae excepturi omnis atque rem.</p>
+                <p>Es gibt Tausende von möglichen Kombinationen von Komponenten, aus denen ein PC bestehen kann,
+                    daher können wir sie hier nicht alle auflisten, aber wir können erwähnen, wo man sie bekommen kann.
+                    In vielen Fällen können Sie Ihre Computerteile von Amazon erhalten, aber in bestimmten Fällen müssen
+                    Sie zu anderen Websites gehen, um sie zu bekommen, dies kann e-bay, newegg oder andere Geschäfte einschließen,
+                    die Sie persönlich besuchen können.
+                    Um einen PC zu bauen, braucht man eigentlich nicht mehr als einen Schraubenzieher, 
+                    aber einige Experten empfehlen die Verwendung von mehr Werkzeugen, und in einigen Fällen können dies 
+                    sehr spezifische Teile sein. Aber wir empfehlen Ihnen, einen guten Schraubendreher, Kabelbinder, 
+                    eine Klemme und eine Zange zu haben, falls Sie einen schlechten Kabelbinder einsetzen.
+                    Wenn Sie die Verwendung dieser Werkzeuge im Detail sehen möchten, empfehlen wir Ihnen, diese Seite zu besuchen</p>
             </div>
 
         <h3>1. Schritt</h3><!--En esta parte el texto va del lado izquierzo y la imagen del lado derecho, el titulo esta encima del texto-->
